--- a/docker-nginx/templates/default.conf.template
+++ b/docker-nginx/templates/default.conf.template
@@ -43,14 +43,19 @@ server {
     root /var/www/certbot;
   }
 
+  # prevent access by IP
+  if ($http_host !~ "${QFIELDCLOUD_HOST}(:${WEB_HTTP_PORT})?") {
+    return 444;
+  }
+
   # use $WEB_HTTPS_PORT in the configuration, since it might be different from 443 (e.g. localhost)
   location / {
-    return 302 http://134.21.20.118:${WEB_HTTPS_PORT}$request_uri;
+    return 302 https://$host:${WEB_HTTPS_PORT}$request_uri;
   }
 }
 
 server {
-  listen 443;
+  listen 443 ssl;
 
   ssl_certificate     ${QFIELDCLOUD_TLS_CERT};
   ssl_certificate_key ${QFIELDCLOUD_TLS_KEY};
@@ -69,7 +74,15 @@ server {
   root /var/www/html/;
 
   # upgrade to https
-  error_page 497 http://134.21.20.118:${WEB_HTTPS_PORT}$request_uri
+  error_page 497 https://$host:${WEB_HTTPS_PORT}$request_uri;
+
+  # prevent access by IP
+  if ($http_host !~ "${QFIELDCLOUD_HOST}(:${WEB_HTTPS_PORT})?") {
+    return 444;
+  }
+
+  # include additional config from the current QFieldCloud instance. This is different from the default `conf.d` directory.
+  include config.d/*.conf;
 
   # deny annoying bot
   deny 34.215.13.216;
