--- a/docker-nginx/templates/default.conf.template
+++ b/docker-nginx/templates/default.conf.template
@@ -77,12 +77,12 @@ server {
   error_page 497 https://$host:${WEB_HTTPS_PORT}$request_uri;
 
   # prevent access by IP
-  if ($http_host !~ "${QFIELDCLOUD_HOST}(:${WEB_HTTPS_PORT})?") {
-    return 444;
-  }
+  #if ($http_host !~ "${QFIELDCLOUD_HOST}(:${WEB_HTTPS_PORT})?") {
+  #  return 444;
+  #}
 
   # include additional config from the current QFieldCloud instance. This is different from the default `conf.d` directory.
-  include config.d/*.conf;
+  #include config.d/*.conf;
 
   # deny annoying bot
   deny 34.215.13.216;
